--- a/index.mjml
+++ b/index.mjml
@@ -60,5 +60,28 @@
       </mj-column>
     </mj-section>
     <!-- ======> / Hero <====== -->
+    <!-- ======> Hero Copy <====== -->
+    <mj-section background-color="#11111A">
+      <mj-column>
+        <mj-text align="center" font-size="24px" letter-spacing=".3px" color="#ffffff" padding="15px 0">
+          No distance is off limits
+        </mj-text>
+        <mj-text align="center" font-size="18px" line-height="24px" color="#ffffff" padding="0 30px">
+          Meet the Cloudultra, now in two new colorways – a trail shoe so comfortable, you’ll want to explore all day long. Built to master mixed terrain over long distances, it makes the perfect style for going from town to trail. And back again. 
+        </mj-text>
+      </mj-column>
+    </mj-section>
+    <!-- ======> / Hero Copy <====== -->
+    <!-- ======> Hero CTA <====== -->
+    <mj-section background-color="#11111A">
+      <mj-column>
+        <mj-text align="center" padding="30px 0 45px">
+          <a href="#" style="display: inline-block; font-size: 18px; letter-spacing: 1px; color: #ffffff; border: 1px solid #ffffff; padding: 15px 0; width: 180px;">Get men's</a>
+          <span>&nbsp;</span>
+          <a href="#" style="display: inline-block; font-size: 18px; letter-spacing: 1px; color: #ffffff; border: 1px solid #ffffff; padding: 15px 0; width: 180px;">Get women's</a>
+        </mj-text>
+      </mj-column>
+    </mj-section>
+    <!-- ======> / Hero CTA <====== -->
   </mj-body>
 </mjml>
