--- a/index.mjml
+++ b/index.mjml
@@ -41,7 +41,11 @@
         border: 0;
       }
       /* ======> Mobile <====== */
-      @media only screen and (max-width: 599.8px) {}
+      @media only screen and (max-width: 599.8px) {
+        .prod-img > table > tbody > tr > td {
+          width: 100% !important;
+        }
+      }
     </mj-style>
   </mj-head>
   <mj-body background-color="#f6f6f6">
@@ -83,12 +87,25 @@
       </mj-column>
     </mj-section>
     <!-- ======> / Hero CTA <====== -->
+    <!-- ======> Horizontal Rule <====== -->
+    <mj-section background-color="#11111A">
+      <mj-column padding="0 21px">
+        <mj-text>
+          <table width="100%" cellspacing="0" cellpadding="0" role="presentation" border="0" align="center">
+            <tr>
+              <td style="border-top: 1px solid #ffffff;"></td>
+            </tr>
+          </table>
+        </mj-text>
+      </mj-column>
+    </mj-section>
+    <!-- ======> / Horizontal Rule <====== -->
     <!-- ======> Tame Every Trail <====== -->
     <mj-section background-color="#11111A">
-      <mj-column padding="10px 15px" vertical-align="middle">
-        <mj-image src="https://i.ibb.co/DbP3sYg/cloud-ultra-1.png" alt="Cloud Ultra" />
+      <mj-column padding="45px 21px" vertical-align="middle">
+        <mj-image css-class="prod-img" src="https://i.ibb.co/DbP3sYg/cloud-ultra-1.png" alt="Cloud Ultra" />
       </mj-column>
-      <mj-column padding="10px 15px" vertical-align="middle">
+      <mj-column padding="45px 21px" vertical-align="middle">
         <mj-text align="center" font-size="24px" letter-spacing=".3px" color="#ffffff">
           Tame every trail
         </mj-text>
@@ -98,5 +115,46 @@
       </mj-column>
     </mj-section>
     <!-- ======> / Tame Every Trail <====== -->
+    <!-- ======> Horizontal Rule <====== -->
+    <mj-section background-color="#11111A">
+      <mj-column padding="0 21px">
+        <mj-text>
+          <table width="100%" cellspacing="0" cellpadding="0" role="presentation" border="0" align="center">
+            <tr>
+              <td style="border-top: 1px solid #ffffff;"></td>
+            </tr>
+          </table>
+        </mj-text>
+      </mj-column>
+    </mj-section>
+    <!-- ======> / Horizontal Rule <====== -->
+    <!-- ======> Push Your Limits <====== -->
+    <mj-section background-color="#11111A" direction="rtl">
+      <mj-column padding="45px 21px" vertical-align="middle">
+        <mj-image css-class="prod-img" src="https://i.ibb.co/J3RSWZd/cloud-ultra-2.png" alt="Cloud Ultra" />
+      </mj-column>
+      <mj-column padding="45px 21px" vertical-align="middle">
+        <mj-text align="center" font-size="24px" letter-spacing=".3px" color="#ffffff">
+          Push your limits
+        </mj-text>
+        <mj-text align="center" font-size="16px" line-height="24px" color="#ffffff" padding-top="21px">
+          The two-layer mesh upper on the Cloudultra is reinforced with lightweight TPU – meaning it not only lasts the distance, but provides breathable comfort too.
+        </mj-text>
+      </mj-column>
+    </mj-section>
+    <!-- ======> / Push Your Limits <====== -->
+    <!-- ======> Horizontal Rule <====== -->
+    <mj-section background-color="#11111A">
+      <mj-column padding="0 21px">
+        <mj-text>
+          <table width="100%" cellspacing="0" cellpadding="0" role="presentation" border="0" align="center">
+            <tr>
+              <td style="border-top: 1px solid #ffffff;"></td>
+            </tr>
+          </table>
+        </mj-text>
+      </mj-column>
+    </mj-section>
+    <!-- ======> / Horizontal Rule <====== -->
   </mj-body>
 </mjml>
